--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,12 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.rti--container {
+  background-color: rgb(250, 250, 250);
+  border-color: #282c34;
+  color: #66b370;
+  border: 3px solid;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #6d85b4;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -27,12 +19,18 @@
 .App-link {
   color: #61dafb;
 }
+.title {
+  font-size: 1rem;
+  text-align: center !important;
+  color: #4aa1f3;
+  font-weight: bold;
+}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+  background-color: white;
+  min-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
