--- a/src/App.css
+++ b/src/App.css
@@ -26,11 +26,16 @@
   font-weight: bold;
 }
 
-.content {
-  background-color: white;
-  min-height: 10vh;
+.drop-container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0;
+}
+
+.drop-message {
+  text-align: center;
+  color: #4aa1f3;
+  font-family: Arial;
+  font-size: 20px;
 }
